Support building Example module with OpenJDK 23